--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "@radix-ui/react-switch": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "electron-store": "^8.1.0",
     "electron-updater": "^6.1.7",
+    "framer-motion": "^11.0.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-router-dom": "^6.22.0",
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.2.1",
