--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-router-dom": "^6.22.0",
+    "react-zoom-pan-pinch": "^3.4.2",
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
