--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
+    "react-spinners": "^0.13.8",
     "react-zoom-pan-pinch": "^3.4.2",
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.2.1",
