--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-spinners": "^0.13.8",
+    "react-virtuoso": "^4.7.12",
     "react-zoom-pan-pinch": "^3.4.2",
     "sonner": "^1.5.0",
     "sort-by": "^0.0.2",
